<resources>
    <string name="app_name">CustomDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aidl">AidlActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_network_setting">NetworkSettingActivity</string>
    <string name="title_activity_acquisition_configuration">AcquisitionConfiguration</string>
    <string name="title_activity_tooltip">TooltipActivity</string>

    <!--答题界面-->
    <string name="title">1+1=?</string>
    <string name="optionA_one">A.2</string>
    <string name="optionB_one">B.3</string>
    <string name="optionC_one">C.4</string>
    <string name="optionD_one">D.5</string>
    <string name="optionA_two">A</string>
    <string name="optionB_two">B</string>
    <string name="optionC_two">C</string>
    <string name="optionD_two">D</string>

    <!--http-->
    <string name="hello">Hello World, GetAPictureFromInternetActivity!</string>
    <string name="path">The Path of the Picture</string>
    <string name="button">View</string>
    <string name="error">Failed to get the picture.</string>


    <string name="title_http">name</string>
    <string name="length">age</string>
    <string name="button_http">save</string>
    <string name="success">Succeeded to save</string>
    <string name="fail">failed to save</string>

    <!--
        其中%后面是占位符的位置，从1开始，
        $ 后面是填充数据的类型
         %d：表示整数型；
         %f ：表示浮点型，其中f前面的.2表示小数的位数
         %c：表示字符串
     -->
    <string name="data">整数型:%1$d，浮点型：%2$.2f，字符串:%3$s</string>
    <string name="tip">装不了了</string>
</resources>
