<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/margin_layout_left"
                tools:context="com.eebbk.gbofsafetyknowledge.activity.AnswerActivity">

    <TextView
        android:id="@+id/TextView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/title"
        android:textColor="@color/yellow"
        android:textSize="@dimen/ct_44sp" />

    <com.vince.demo.customdemo.radiogroup.MyRadioGroup
        android:id="@+id/RadioGroup_radioBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TextView_title"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView_picA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageView_picA"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/RadioButton_A"
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ct_33sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/optionA_two"
                    android:textSize="@dimen/ct_33sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView_picB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageView_picB"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/RadioButton_B"
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ct_33sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/optionB_two"
                    android:textSize="@dimen/ct_33sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView_picC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageView_picC"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/RadioButton_C"
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ct_33sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/optionC_two"
                    android:textSize="@dimen/ct_33sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView_picD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageView_picD"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/RadioButton_D"
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ct_33sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/optionD_two"
                    android:textSize="@dimen/ct_33sp" />

            </LinearLayout>

        </RelativeLayout>
    </com.vince.demo.customdemo.radiogroup.MyRadioGroup>
</RelativeLayout>
